--- a/TestTask.MVC/appsettings.json
+++ b/TestTask.MVC/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DataContext": "Host=localhost;Port=5432;Database=TestTask;Username=postgres;Password=tema070400"
+  }
 }
